# src/Loaders/swagger.json
@@ -427,6 +427,12 @@
         "responses": {
           "200": {
             "description": "Mensaje enviado con éxito"
+          },
+          "400": {
+            "description": "Datos faltantes"
+          },
+          "500": {
+            "description": "Error en el servidor"
           }
         }
       }
